# Personal-AI-Agent-Chatbot

./: Dockerfile  README.md  chainlit.md  main.py  pyproject.toml
.chainlit/: config.toml
public/: stylesheet.css  theme.json
